<resources>
    <string name="app_name">App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">My Profile</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profile_picture">Profile picture</string>
    <string name="profile_label">label</string>
    <string name="Register">My Profile</string>
    <string name="Name">Name:</string>
    <string name="Email">E-Mail:</string>
    <string name="Password">Password:</string>
    <string name="Done">Register</string>
    <string name="login">Log In</string>
</resources>