<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EC5578">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop ="30dp"
        android:text="@string/Register"
        android:textColor="#FFFFFF"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="50dp"
        android:hint="@string/Name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/Name"
        android:layout_marginTop="25dp"
        android:hint="@string/Email" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/Email"
        android:layout_marginTop="25dp"
        android:hint="@string/Password" />

    <Button
        android:id="@+id/button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="143dp"
        android:layout_marginLeft="143dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="143dp"
        android:layout_marginRight="143dp"
        android:gravity="center"
        android:text="@string/Done"
        app:backgroundTint="#56AA59" />

</RelativeLayout>